<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#eaefee"
                android:padding="10dip"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_title"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:id="@+id/linear2"
                  android:background="@drawable/custom_shape"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:paddingLeft="20dip" android:paddingRight="20dip"
                  android:paddingTop="50dip" android:paddingBottom="50dip"
                  android:layout_marginLeft="20dip"
                  android:layout_marginRight="20dip"
                  android:orientation="vertical"
            >


        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_difficulty"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:paddingBottom="60dip"
                android:gravity="center"
                />

        <Button android:text="@string/button_easy"
                android:id="@+id/button_easy"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@drawable/button_green"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:layout_gravity="center"
                ></Button>

        <Button
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/button_normal"
                android:text="@string/button_medium"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_blue"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                ></Button>

        <Button
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/button_hard"
                android:text="@string/button_hard"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_red"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                ></Button>

    </LinearLayout>
</RelativeLayout>