<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#eaefee"
                android:padding="10dip"
        >

    <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_scores"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:id="@+id/relative_game"
                    android:layout_marginTop="90dip"
                    android:layout_centerHorizontal="true"
            >

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/textsuccesvide"
                android:layout_centerHorizontal="true"
                android:text=" "
                android:layout_marginTop="90dip"
                />

        <Button android:text="@string/button_regame"
                android:textSize="15sp"
                android:id="@+id/bouton_rejouer"
                android:layout_toLeftOf="@id/textsuccesvide"
                android:background="@drawable/button_blue"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:paddingRight="37dip" android:paddingLeft="37dip"
                android:paddingTop="20dip" android:paddingBottom="20dip"
                android:textColor="@android:color/white"
                ></Button>

        <Button
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/bouton_menu_principal"
                android:text="@string/button_main"
                android:layout_toRightOf="@id/textsuccesvide"
                android:background="@drawable/button_red"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:paddingRight="20dip" android:paddingLeft="20dip"
                android:paddingTop="20dip" android:paddingBottom="20dip"
                ></Button>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/linear2"
                        android:background="@drawable/custom_shape"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="200dip"
                        android:paddingLeft="70dip" android:paddingRight="70dip"
                        android:orientation="vertical"
                >

            <ListView
                    android:id="@+id/list_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bouton_menu_principal"
                    android:layout_centerHorizontal="true"
                    />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>